(MSS-1620) Fix-PDP-layout-shifts-caused-by-product-images why: Fixed on mobile

--- a/movado/cartridges/app_custom_movado/cartridge/client/default/scss/product/_imageCarousel.scss
+++ b/movado/cartridges/app_custom_movado/cartridge/client/default/scss/product/_imageCarousel.scss
@@ -85,6 +85,21 @@
       max-height: 100vh;
       max-width: 100%;
       touch-action: double-tap-zoom;
+
+      @media (max-width: $custom-sm4) {
+        width: rem(388);
+        height: rem(388); 
+      }
+
+      @media (max-width: $small-screen-width375) {
+       width: rem(375);
+       height: rem(375);                                       
+      }
+
+      @media (max-width: $small-screen-width) {
+        width: rem(310);
+        height: rem(310);                                       
+      }
     }
   }
 
