--- a/movado_redesign/cartridges/app_custom_movado_redesign/cartridge/client/default/scss/product/detail.scss
+++ b/movado_redesign/cartridges/app_custom_movado_redesign/cartridge/client/default/scss/product/detail.scss
@@ -200,6 +200,43 @@ $arrow-height: 1.25em;
                     height: rem(426.5);
                 }
             }
+            
+            @media (max-width: $custom-sm4) {
+
+                &.carousel-indicator-image {
+                    width: rem(68);
+                    height: rem(68); 
+                }
+
+                &.tile-image {
+                    width: rem(117);
+                    height: rem(213);
+                }
+            }
+            
+            @media (max-width: $small-screen-width375) {
+                &.carousel-indicator-image {
+                    width: rem(68);
+                    height: rem(68);
+                }
+
+                &.tile-image {
+                    width: rem(152);
+                    height: rem(183);
+                }
+            }
+            
+            @media (max-width: $small-screen-width) {
+                &.carousel-indicator-image {
+                    width: rem(68);
+                    height: rem(68);
+                }
+
+                &.tile-image {
+                    width: rem(125);
+                    height: rem(150);
+                }
+            }
 
         }
     }
@@ -356,6 +393,21 @@ $arrow-height: 1.25em;
                         height: rem(600);
                         width: rem(600);
                     }
+
+                    @media (max-width: $custom-sm4) {
+                        width: rem(409);
+                        height: rem(409);
+                    }
+                    
+                    @media (max-width: $small-screen-width375) {
+                        height: rem(359);
+                        width: rem(359);
+                    }
+                    
+                    @media (max-width: $small-screen-width) {
+                        height: rem(304);
+                        width: rem(304);
+                    }
                 }
             }
 
@@ -481,6 +533,18 @@ $arrow-height: 1.25em;
 
     .zoom-img {
        cursor: zoom-in;
+
+        @media (max-width: $custom-sm4) {
+            height: rem(409);
+        }
+
+        @media (max-width: $small-screen-width375) {
+            height: rem(359);
+        }
+
+        @media (max-width: $small-screen-width) {
+            height: rem(304);
+        }
 
         &.zoomed-img {
             cursor: zoom-out;
